Alex Michelon\Programação Ciência de Dados - Exercícios Semana 2 v.2 - Ajuste diretórios

--- a/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_1.ipynb
+++ b/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_1.ipynb
@@ -32,7 +32,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "dados_jogos = pd.read_csv('arquivo/vgsales.csv')\n",
+    "dados_jogos = pd.read_csv('arquivo/dados/vgsales.csv')\n",
     "dados_jogos.shape #retorna número linhas e colunas do DataFrame\n",
     "dados_jogos.head(4) #retorna linhas e colunas com dados do DataFrame"
    ]
