--- a/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_2.ipynb
+++ b/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_2.ipynb
@@ -19,7 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "dados = pd.read_csv('arquivo/dados.csv') #carrega base de dados formato csv\n",
+    "dados = pd.read_csv('arquivo/dados/dados.csv') #carrega base de dados formato csv\n",
     "dados.shape #quantidade de linhas e colunas do DataFrame\n",
     "# dados.head() #5 primeitos registros do DataFrame\n",
     "# dados.isnull().count() #quantidade de dados nulos"
@@ -1167,6 +1167,99 @@
     "    print('\\nDesta forma, pode-se diser de que o referido estado influencia diretamente na média de \"Renda\" da região.')\n",
     "else:\n",
     "    print('\\nDesta forma, pode-se diser de que o referido estado não influencia significamente na média de \"Renda\" da região.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mapa do Brasil com Média de Renda de Pessoas Negras por Estado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cor_1 = (0, 255, 0) #verde\n",
+    "cor_2 = (255, 0, 0) #azul\n",
+    "cor_3 = (255, 0, 255) #rosa\n",
+    "cor_vermelha = (0, 0, 255) #vermelho\n",
+    "cor_preta = (0,0,0) #preto\n",
+    "\n",
+    "estados_coordenadas = {'Rondônia': [173, 260], 'Acre': [77, 239], 'Amazonas': [149, 164], 'Roraima': [195, 67], \n",
+    "                       'Pará': [323, 173], 'Amapá': [337, 72], 'Tocantins': [386, 252], 'Maranhão': [432, 173], \n",
+    "                       'Piauí': [465, 211], 'Ceará': [522, 172], 'Rio Grande do Norte': [564, 182], 'Paraíba': [570, 203], \n",
+    "                       'Pernambuco': [543, 219], 'Alagoas': [564, 242], 'Sergipe': [549, 253], 'Bahia': [481, 275], \n",
+    "                       'Minas Gerais': [436, 373], 'Espírito Santo': [496, 386], 'Rio de Janeiro': [462, 428], \n",
+    "                       'São Paulo': [380, 422], 'Paraná': [334, 455], 'Santa Catarina': [355, 498], \n",
+    "                       'Rio Grande do Sul': [315, 531], 'Mato Grosso do Sul': [288, 397], 'Mato Grosso': [279, 290], \n",
+    "                       'Goiás': [360, 334],  'Distrito Federal': [395, 325]}\n",
+    "\n",
+    "def classifica_tamanho_cor_figura(data_frame: pd.DataFrame, campo: str, renda_media: float):\n",
+    "    if(renda_media) <= (data_frame[campo].describe().loc['25%']):\n",
+    "        cor = cor_1\n",
+    "        tamanho_figura = 3\n",
+    "        tamanho_linha = 2\n",
+    "    elif (renda_media > data_frame[campo].describe().loc['25%']) and (renda_media <= data_frame[campo].describe().loc['50%']):\n",
+    "        cor = cor_2\n",
+    "        tamanho_figura = 5\n",
+    "        tamanho_linha = 2\n",
+    "    elif (renda_media > data_frame[campo].describe().loc['50%']) and (renda_media <= data_frame[campo].describe().loc['75%']):\n",
+    "        cor = cor_3\n",
+    "        tamanho_figura = 7\n",
+    "        tamanho_linha = 2\n",
+    "    else: \n",
+    "        cor = cor_4\n",
+    "        tamanho_figura = 9\n",
+    "        tamanho_linha = 2\n",
+    "    return tamanho_figura, cor, tamanho_linha\n",
+    "cor_2 = (255, 0, 0) #azul"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "#carrega e apresenta características da imagem\n",
+    "imagem = cv2.imread('arquivo/imagem/mapa_brasil_estados.jpg')\n",
+    "imagem = cv2.resize(imagem, (600,600))\n",
+    "print('Largura em pixels: ', end='')\n",
+    "print(imagem.shape[1]) #largura da imagem\n",
+    "print('Altura em pixels: ', end='')\n",
+    "print(imagem.shape[0]) #altura da imagem\n",
+    "print('Qtde de canais: ', end='')\n",
+    "print(imagem.shape[2])\n",
+    "\n",
+    "#criação do DataFrame\n",
+    "media_renda_pessoas_negras_por_estado = dados_pessoas_negras.groupby('UF')['Renda'].mean().round(2).reset_index()\n",
+    "media_renda_pessoas_negras_por_estado.columns = ['Estado', 'Renda_Media']\n",
+    "\n",
+    "#montagem do mapa com figuras\n",
+    "for i in range(len(media_renda_pessoas_negras_por_estado)):\n",
+    "    uf = ufs[\"descricao\"][ufs[\"codigo\"] == media_renda_pessoas_negras_por_estado.iloc[i,0]].max()\n",
+    "    tamanho_figura, cor, tamanho_linha = classifica_tamanho_cor_figura(media_renda_pessoas_negras_por_estado, 'Renda_Media', media_renda_pessoas_negras_por_estado.iloc[i,1])\n",
+    "    cv2.circle(imagem, estados_coordenadas[uf], tamanho_figura, cor, tamanho_linha) \n",
+    "    cv2.putText(imagem, 'R$ ' + str(media_renda_pessoas_negras_por_estado.iloc[i,1]), list(map(lambda x,y: x+y, estados_coordenadas[uf], [-35, 20])), cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_vermelha,1)\n",
+    "\n",
+    "#legenda\n",
+    "cv2.putText(imagem,'Legenda',(10,400),cv2.FONT_HERSHEY_SIMPLEX,0.75,cor_preta,2)\n",
+    "cv2.circle(imagem, (10, 435), 3, cor_1, 2)\n",
+    "cv2.putText(imagem,'Media   ate R$ 1.189,32',(20,440),cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_preta,1)\n",
+    "cv2.circle(imagem, (10, 455), 3, cor_2, 2)\n",
+    "cv2.putText(imagem,'Media   de  R$ 1.189,32 e R$ 1.475,24',(20,460),cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_preta,1)\n",
+    "cv2.circle(imagem, (10, 475), 3, cor_3, 2)\n",
+    "cv2.putText(imagem,'Media   de  R$ 1.475,24 e R$ 1.620,58',(20,480),cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_preta,1)\n",
+    "cv2.circle(imagem, (10, 495), 3, cor_vermelha, 2)\n",
+    "cv2.putText(imagem,'Media maior R$ 1.620,58',(20,500),cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_preta,1)\n",
+    "\n",
+    "cv2.imshow('Media de Renda Pessoas Negras por Estado', imagem) #mostra a imagem em tela\n",
+    "cv2.waitKey(0) #espera pressionar qualquer tecla para fechara a imagem"
    ]
   }
  ],
