--- a/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_2.ipynb
+++ b/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_2.ipynb
@@ -1513,12 +1513,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#definição de variáveis de cores\n",
     "cor_1 = (0, 255, 0) #verde\n",
     "cor_2 = (255, 0, 0) #azul\n",
     "cor_3 = (255, 0, 255) #rosa\n",
     "cor_vermelha = (0, 0, 255) #vermelho\n",
     "cor_preta = (0,0,0) #preto\n",
     "\n",
+    "#dicionário contendo estados e coordenadas x e y fixas para a figura selecionada \n",
     "estados_coordenadas = {'Rondônia': [173, 260], 'Acre': [77, 239], 'Amazonas': [149, 164], 'Roraima': [195, 67], \n",
     "                       'Pará': [323, 173], 'Amapá': [337, 72], 'Tocantins': [386, 252], 'Maranhão': [432, 173], \n",
     "                       'Piauí': [465, 211], 'Ceará': [522, 172], 'Rio Grande do Norte': [564, 182], 'Paraíba': [570, 203], \n",
@@ -1526,8 +1528,16 @@
     "                       'Minas Gerais': [436, 373], 'Espírito Santo': [496, 386], 'Rio de Janeiro': [462, 428], \n",
     "                       'São Paulo': [380, 422], 'Paraná': [334, 455], 'Santa Catarina': [355, 498], \n",
     "                       'Rio Grande do Sul': [315, 531], 'Mato Grosso do Sul': [288, 397], 'Mato Grosso': [279, 290], \n",
-    "                       'Goiás': [360, 334],  'Distrito Federal': [395, 325]}\n",
-    "\n",
+    "                       'Goiás': [360, 334],  'Distrito Federal': [395, 325]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#função para determinar cor, tamanho da figura e tamanho da linha da figura desenhada na figura\n",
     "def classifica_tamanho_cor_figura(data_frame: pd.DataFrame, campo: str, renda_media: float):\n",
     "    if(renda_media) <= (data_frame[campo].describe().loc['25%']):\n",
     "        cor = cor_1\n",
@@ -1577,20 +1587,38 @@
    "source": [
     "import cv2\n",
     "\n",
+    "#definir caminho da imagem \n",
+    "path_imagem = 'arquivo/imagem/mapa_brasil_estados.jpg'\n",
+    "\n",
     "#carrega e apresenta características da imagem\n",
-    "imagem = cv2.imread('arquivo/imagem/mapa_brasil_estados.jpg')\n",
+    "imagem = cv2.imread(path_imagem)\n",
     "imagem = cv2.resize(imagem, (600,600))\n",
     "print('Largura em pixels: ', end='')\n",
     "print(imagem.shape[1]) #largura da imagem\n",
     "print('Altura em pixels: ', end='')\n",
     "print(imagem.shape[0]) #altura da imagem\n",
     "print('Qtde de canais: ', end='')\n",
-    "print(imagem.shape[2])\n",
-    "\n",
+    "print(imagem.shape[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#criação do DataFrame\n",
     "media_renda_pessoas_negras_por_estado = dados_pessoas_negras.groupby('UF')['Renda'].mean().round(2).reset_index()\n",
-    "media_renda_pessoas_negras_por_estado.columns = ['Estado', 'Renda_Media']\n",
-    "\n",
+    "media_renda_pessoas_negras_por_estado.columns = ['Estado', 'Renda_Media']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#manipulando com OpenCV\n",
     "#montagem do mapa com figuras\n",
     "for i in range(len(media_renda_pessoas_negras_por_estado)):\n",
     "    uf = ufs[\"descricao\"][ufs[\"codigo\"] == media_renda_pessoas_negras_por_estado.iloc[i,0]].max()\n",
@@ -1598,7 +1626,7 @@
     "    cv2.circle(imagem, estados_coordenadas[uf], tamanho_figura, cor, tamanho_linha) \n",
     "    cv2.putText(imagem, 'R$ ' + str(media_renda_pessoas_negras_por_estado.iloc[i,1]), list(map(lambda x,y: x+y, estados_coordenadas[uf], [-35, 20])), cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_vermelha,1)\n",
     "\n",
-    "#legenda\n",
+    "#legenda aplicada na imagem\n",
     "cv2.putText(imagem,'Legenda',(10,400),cv2.FONT_HERSHEY_SIMPLEX,0.75,cor_preta,2)\n",
     "cv2.circle(imagem, (10, 435), 3, cor_1, 2)\n",
     "cv2.putText(imagem,'Media   ate R$ ' + str(media_renda_pessoas_negras_por_estado['Renda_Media'].describe().loc['25%']),(20,440),cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_preta,1)\n",
@@ -1646,9 +1674,17 @@
     }
    ],
    "source": [
-    "#dicionário com posição de cada região na imagem\n",
-    "regioes = {'Norte': [219, 155], 'Nordeste': [431, 233], 'Sudeste': [286, 331], 'Sul': [374, 397], 'Centro-Oeste': [306, 496]}\n",
-    "\n",
+    "#dicionário com posição de cada região na imagem (fixa)\n",
+    "regioes = {'Norte': [219, 155], 'Nordeste': [431, 233], 'Sudeste': [286, 331], 'Sul': [374, 397], 'Centro-Oeste': [306, 496]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#manipulação de DataFrame\n",
     "#cria DataFrame com dados agrupados pela coluna 'UF' com média da coluna 'Renda'\n",
     "medias_pessoas_negras_regiao = dados_pessoas_negras.groupby('UF')['Renda'].mean().reset_index()\n",
     "medias_pessoas_negras_regiao\n",
@@ -1666,25 +1702,42 @@
     "           np.where(media_pessoas_negras_regiao_sul, 'Sul', 'Centro-Oeste'))))\n",
     "\n",
     "#cria DataFrame com dados de média da coluna \"Renda\" agrupados pelo filtro de região\n",
-    "medias_pessoas_negras_regiao = medias_pessoas_negras_regiao.groupby(condicao)['Renda'].mean().round(2).reset_index()\n",
-    "\n",
+    "medias_pessoas_negras_regiao = medias_pessoas_negras_regiao.groupby(condicao)['Renda'].mean().round(2).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#carrega e apresenta características da imagem\n",
-    "imagem = cv2.imread('arquivo/imagem/mapa_brasil_regioes.jpeg')\n",
+    "path_imagem = 'arquivo/imagem/mapa_brasil_regioes.jpeg'\n",
+    "\n",
+    "imagem = cv2.imread(path_imagem)\n",
     "imagem = cv2.resize(imagem, (600,600))\n",
     "print('Largura em pixels: ', end='')\n",
     "print(imagem.shape[1]) #largura da imagem\n",
     "print('Altura em pixels: ', end='')\n",
     "print(imagem.shape[0]) #altura da imagem\n",
     "print('Qtde de canais: ', end='')\n",
-    "print(imagem.shape[2])\n",
-    "\n",
+    "print(imagem.shape[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#manipulando a iagem com OpenCV\n",
     "#montagem do mapa com figuras\n",
     "for i in range(len(medias_pessoas_negras_regiao)):\n",
     "    tamanho_figura, cor, tamanho_linha = classifica_tamanho_cor_figura(medias_pessoas_negras_regiao, 'Renda', medias_pessoas_negras_regiao.iloc[i,1])\n",
     "    cv2.circle(imagem, regioes[medias_pessoas_negras_regiao.iloc[i,0]], tamanho_figura, cor, tamanho_linha) \n",
     "    cv2.putText(imagem, 'R$ ' + str(medias_pessoas_negras_regiao.iloc[i,1]), list(map(lambda x,y: x+y, regioes[medias_pessoas_negras_regiao.iloc[i,0]], [-35, 25])), cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_preta,1)\n",
     "\n",
-    "#legenda\n",
+    "#legenda aplicada na imagem\n",
     "cv2.putText(imagem,'Legenda',(10,400),cv2.FONT_HERSHEY_SIMPLEX,0.75,cor_preta,2)\n",
     "cv2.circle(imagem, (10, 435), 3, cor_1, 2)\n",
     "cv2.putText(imagem,'Media   ate R$ ' + str(medias_pessoas_negras_regiao['Renda'].describe().loc['25%']),(20,440),cv2.FONT_HERSHEY_SIMPLEX,0.40,cor_preta,1)\n",
