Alex Michelon/Ajuste parte_2.ipynb

--- a/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_2.ipynb
+++ b/09-programacao_ciencias_de_dados/semana_2/exercicios/parte_2.ipynb
@@ -1371,7 +1371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#manipulando a iagem com OpenCV\n",
+    "#manipulando a imagem com OpenCV\n",
     "#montagem do mapa com figuras\n",
     "for i in range(len(medias_pessoas_negras_regiao)):\n",
     "    tamanho_figura, cor, tamanho_linha = classifica_tamanho_cor_figura(medias_pessoas_negras_regiao, 'Renda', medias_pessoas_negras_regiao.iloc[i,1])\n",
