Alex Michelon/Programação para ciência de dados: adaptação/melhorias no exercícios semana 3, criação estrutura trabalho final.

--- a/09-programacao_ciencias_de_dados/semana_1/exercicios/parte_2.ipynb
+++ b/09-programacao_ciencias_de_dados/semana_1/exercicios/parte_2.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "(array([1, 3, 5, 7], dtype=int64),)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "array([ 6,  9, 10])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,20 +283,19 @@
      "output_type": "stream",
      "text": [
       "Array 2 dimensões:\n",
-      "[[3 9 0]\n",
-      " [8 4 1]\n",
-      " [3 3 4]\n",
-      " [0 2 0]\n",
-      " [0 9 8]]\n",
+      "[[2 1 4]\n",
+      " [6 5 7]\n",
+      " [7 6 5]\n",
+      " [0 4 6]]\n",
       "\n",
       "Array 1 dimensão com a função flatten():\n",
-      "[3 9 0 8 4 1 3 3 4 0 2 0 0 9 8]\n",
+      "[2 1 4 6 5 7 7 6 5 0 4 6]\n",
       "\n",
       "Array 1 dimensão com a função ravel():\n",
-      "[3 9 0 8 4 1 3 3 4 0 2 0 0 9 8]\n",
+      "[2 1 4 6 5 7 7 6 5 0 4 6]\n",
       "\n",
       "Array 1 dimensão com a função reshape():\n",
-      "[[3 9 0 8 4 1 3 3 4 0 2 0 0 9 8]]\n",
+      "[[2 1 4 6 5 7 7 6 5 0 4 6]]\n",
       "\n"
      ]
     }
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +395,7 @@
        "-1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +439,7 @@
        "-1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,6 +496,7 @@
     "hsv = cv2.cvtColor(arquivo, cv2.COLOR_BGR2HSV)\n",
     "blur = cv2.medianBlur(hsv ,11)\n",
     "\n",
+    "#cor fixa padrão HSV selecionada na imagem escolhida\n",
     "lower = np.array([0,1,99])\n",
     "upper = np.array([179,105,255])\n",
     "\n",
@@ -506,6 +506,96 @@
     "#cv2.imshow(\"Arquivo\",arquivo)\n",
     "#cv2.imshow(\"mask \",mask)\n",
     "cv2.imshow('stack', np.hstack([arquivo, res])) #abre a imagem ao lado da mascara\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''b) Crie e aplique um filtro que procure exibir somente (ou quase isso) os pontos mais brilhantes da imagem \n",
+    "(normalmente estrelas ou galáxias)'''\n",
+    "\n",
+    "'''\n",
+    "Para obter valores máximos e mínimos em HSV da cor a ser segmentada, executar o seguinte comando no terminal:\n",
+    "python get_color.py -i '<endereço da imagem>'\n",
+    "-> fazer um retângulo na imagem no local da cor a ser segmentada e apertar a letra 'r' do teclado \n",
+    "no terminal irão aparecer as medidas em HSV. Alterar as variáveis 'lower' e 'upper'\n",
+    "'''\n",
+    "\n",
+    "#usando detecção de Edge (função Canny())\n",
+    "'''A detecção de edges é uma técnica de processamento de imagem para encontrar limites de objetos na imagem. \n",
+    "Os pontos nos quais o brilho da imagem muda muito são tipicamente organizados em um conjunto de segmentos \n",
+    "de linhas curvas denominados edges.\n",
+    "\n",
+    "Fonte:https://www.tutorialkart.com/opencv/python/image-edge-detection/#gsc.tab=0'''\n",
+    "\n",
+    "import cv2\n",
+    "\n",
+    "# Carregamos a imagem\n",
+    "arquivo = cv2.imread('arquivo/imagem.png')\n",
+    "arquivo = cv2.resize(arquivo, (700,500))\n",
+    "\n",
+    "# Utilizamos a função Canny() para detectar edges\n",
+    "edges = cv2.Canny(arquivo,100,200)\n",
+    "\n",
+    "cv2.imshow(\"Imagem Alterada\",edges)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''b) Crie e aplique um filtro que procure exibir somente (ou quase isso) os pontos mais brilhantes da imagem \n",
+    "(normalmente estrelas ou galáxias)'''\n",
+    "\n",
+    "'''\n",
+    "Para obter valores máximos e mínimos em HSV da cor a ser segmentada, executar o seguinte comando no terminal:\n",
+    "python get_color.py -i '<endereço da imagem>'\n",
+    "-> fazer um retângulo na imagem no local da cor a ser segmentada e apertar a letra 'r' do teclado \n",
+    "no terminal irão aparecer as medidas em HSV. Alterar as variáveis 'lower' e 'upper'\n",
+    "'''\n",
+    "\n",
+    "#usando detecção de Edge (função Canny())\n",
+    "'''A detecção de edges é uma técnica de processamento de imagem para encontrar limites de objetos na imagem. \n",
+    "Os pontos nos quais o brilho da imagem muda muito são tipicamente organizados em um conjunto de segmentos \n",
+    "de linhas curvas denominados edges.\n",
+    "\n",
+    "Fonte: https://akiradev.netlify.app/posts/manipulando-imagens-python/'''\n",
+    "\n",
+    "import cv2\n",
+    "\n",
+    "# Carregamos a imagem\n",
+    "arquivo = cv2.imread('arquivo/imagem.png')\n",
+    "arquivo = cv2.resize(arquivo, (700,500))\n",
+    "\n",
+    "# Utilizamos a função Canny() para detectar edges\n",
+    "edges = cv2.Canny(arquivo,100,200)\n",
+    "\n",
+    "COLOR = [102,102,153]\n",
+    "\n",
+    "percentual_escala = 100 # percentagem do tamanho original\n",
+    "comprimento = int(edges.shape[1] * percentual_escala / 100)\n",
+    "altura = int(edges.shape[0] * percentual_escala / 100)\n",
+    "dimensao = (comprimento, altura)\n",
+    "\n",
+    "# redimensiona a imagem\n",
+    "resized = cv2.resize(edges, dimensao, interpolation=cv2.INTER_AREA)\n",
+    "\n",
+    "# adiciona borda a imagem alterada\n",
+    "arquivo = cv2.copyMakeBorder(resized, 10, 10, 10, 10,cv2.BORDER_CONSTANT,value=COLOR)\n",
+    " \n",
+    "# salva a imagem modificada\n",
+    "#cv2.imwrite('arquivo/imagem_alterada.jpg', arquivo)\n",
+    "\n",
+    "cv2.imshow(\"Imagem Alterada\",arquivo)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
